examples/test/testpolicy5461.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5461
  namespace: namespace112
spec:
  podSelector:
    matchLabels:
      key18: value9
      key5: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value14
          key6: value45
          key3: value16
      podSelector:
        matchLabels:
          key48: value46
